fixed spacing and did some details
fixed spacing based on solutions
added type that changes with browser size
changed text alignment in footer
made extra layout for the data lists on large screens

--- a/css/grid.css
+++ b/css/grid.css
@@ -138,7 +138,7 @@
   visibility: visible;
 }
 
-@media only screen and (min-width: 20em) {
+@media only screen and (min-width: 25em) {
 
 .unit-s-hidden {
   display: none;
@@ -234,7 +234,7 @@
 
 }
 
-@media only screen and (min-width: 40em) {
+@media only screen and (min-width: 38em) {
 
 .unit-m-hidden {
   display: none;
